# criu-static

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  RELEASE.md  check_musl.cmake  jreleaser.yml  package_deps_licenses.cmake.in
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  claude.yml
dependencies/: Libaio.cmake  Libcap.cmake  Libintl.cmake  Libmnl.cmake  Libnet.cmake  Libnftables.cmake  Libnftnl.cmake  Libnl.cmake  Protobuf.cmake  ProtobufC.cmake  UtilLinux.cmake  Zlib.cmake
jreleaser/templates/: changelog.tpl
macros/: dependencies.cmake
patch/: criu-build.patch  criu-static-plugin.patch  pagehole-fix.patch
